# my-fastapi-project

./: README.md  pyproject.toml  recap.txt  start.sh
my-fastapi-project/: .env  README.md  alembic.ini  conftest.py  pg_hba.conf  requirements.txt  test.db
my-fastapi-project/4A_CTO_PARTIEL_FIN/: pyvenv.cfg
my-fastapi-project/app/: database.py  main.py  models.py  schemas.py
my-fastapi-project/app/routers/: auth.py  events.py  export.py  members.py
my-fastapi-project/frontend/: package-lock.json  package.json
my-fastapi-project/frontend/public/: index.html
my-fastapi-project/frontend/src/: App.css  App.js  index.css  reportWebVitals.js
my-fastapi-project/frontend/src/components/: CreateEvent.js  CreateMember.js  EventForm.js  Form.css  Home.css  Home.js  MemberForm.js
my-fastapi-project/static/: index.html
my-fastapi-project/tests/: test_main.py
my_fastapi_project/: auth.py  generate_hash.py  main.py  request.py
templates/: index.html
tests/: gestion_erreurs_advanced.py  logging.py  quick_test.py  secure.py  test_custom_logging.py  test_gestion_erreurs_advanced.py  test_main.py  test_secure.py  test_unitaire.py
